--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-native-linear-gradient": "^2.4.0",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.6.0"
+    "react-navigation": "^2.6.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.2.0",
