--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.6.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "babel-jest": "23.2.0",
