--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-image-picker": "^0.26.10",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-swiper": "^1.5.13",
+    "react-native-table-component": "^1.1.8",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.6.0",
     "react-redux": "^5.0.7",
