--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.4.1",
-    "react-native": "0.56.0",
+    "babel-preset-react-native": "^4.0.0",
+    "react": "16.3.1",
+    "react-native": "^0.55.4",
     "react-native-firebase": "^4.3.8",
     "react-native-google-signin": "^0.12.0",
     "react-native-image-picker": "^0.26.10",
@@ -22,10 +23,9 @@
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
-    "babel-jest": "23.2.0",
-    "babel-preset-react-native": "5.0.2",
-    "jest": "23.3.0",
-    "react-test-renderer": "16.4.1"
+    "babel-jest": "23.4.2",
+    "jest": "23.4.0",
+    "react-test-renderer": "16.3.1"
   },
   "jest": {
     "preset": "react-native"
